<resources>
    <!-- Main screen -->
    <string name="app_name">SmartHome</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="action_add_switch">Add Switch</string>
    <string name="empty_switch_list_title">List is empty</string>
    <string name="empty_switch_list_msg">Please add a switch by clicking on the plus button.</string>

    <!-- Settings -->
    <string name="setting_server_header">Server configuration</string>
    <string name="setting_url_textView">Server:</string>
    <string name="setting_url_editText_hint">&lt;your server IP/URL&gt;</string>
    <string name="setting_port_textView">Port:</string>
    <string name="setting_port_editText_hint">&lt;port number&gt;</string>
    <string name="setting_user_textView">User:</string>
    <string name="setting_user_editText_hint">&lt;username&gt;</string>
    <string name="setting_password_textView">Password:</string>
    <string name="setting_save">Test</string>

    <string name="setting_section2_header">Other</string>
    <string name="setting_textView_buttonVib">Button vibration</string>

    <!-- Switch Manager -->
    <string name="single_protocol_spinner_desc">Protocol:</string>
    <string name="action_save_switch">Save switch</string>
    <string name="action_delete_switch">Delete switch</string>
</resources>

